Changed color now to blue

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Katerina Limpitsouni tribute page </h1>
 
-    <p style="color:red;">Katerina Limpitsouni is the creator of <a href="https://undraw.co/illustrations">unDraw</a></p>
+    <p style="color:blue;">Katerina Limpitsouni is the creator of <a href="https://undraw.co/illustrations">unDraw</a></p>
 </body>
 </html>
